# device_soc_esp

./: BUILD.gn  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.soc  README.en.md  README.md  README_ZH.md
esp32_wrover_ie/: BUILD.gn  Kconfig.liteos_m.defconfig.esp32_wrover_ie  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  readme_zh.md
esp32_wrover_ie/liteos_m/: BUILD.gn
esp32_wrover_ie/liteos_m/components/: BUILD.gn
esp32_wrover_ie/liteos_m/components/drivers/: BUILD.gn  hal_watchdog.c
esp32_wrover_ie/liteos_m/components/fs/: BUILD.gn  fs_config.h  fs_init.c  fs_init.h
esp32_wrover_ie/liteos_m/components/utils/: BUILD.gn
esp32_wrover_ie/liteos_m/hals/utils/file/: BUILD.gn
esp32_wrover_ie/liteos_m/hals/utils/file/src/: hal_file.c
esp32_wrover_ie/liteos_m/sdk/: BUILD.gn
esp32_wrover_ie/liteos_m/sdk/include/watchdog/: hal_watchdog.h
esp32_wrover_ie/liteos_m/sdk/rtos/liteos/liteos_m/: main.c  target_config.h
esp32_wrover_ie/liteos_m/sdk/rtos/liteos/liteos_m/test/: task_demo.c  task_demo.h
esp32_wrover_ie/liteos_m/sdk/scripts/link/: ESP32.ld
