# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/adapter/khdf/liteos_m/hdf.gni")

config("public") {
  include_dirs = [ "include" ]
}

kernel_module("sys_adapter") {
  sources = [
    "src/dprintf.c",
    "src/swap.c",
  ]

  include_dirs = [ "include" ]

  include_dirs += [
    "//device/soc/espressif/esp32/liteos_m/sdk/include/board",
    "//device/soc/espressif/esp32/liteos_m/sdk/include/watchdog",
  ]
  defines = [ "_GNU_SOURCE" ]
}
